# emacs-anki-deck

./: .gitignore  README.org  pyproject.toml
output/: README.org
